vlib/v/checker/tests/sum_type_mutable_cast_err.out
vlib/v/checker/tests/sum_type_mutable_cast_err.vv:23:10: error: cannot use operator `+` with `Abc`
   21 |     mut x := Abc(0)
   22 |     if x is int {
   23 |         _ := x + 5
      |                ^
   24 |     }
   25 |     mut f2 := Foo2{Bar2{Abc(0)}}
vlib/v/checker/tests/sum_type_mutable_cast_err.vv:27:8: error: undefined ident: `f`
   25 |     mut f2 := Foo2{Bar2{Abc(0)}}
   26 |     if f2.b.a is int {
   27 |         _ := f.b.a + 5
      |              ^
   28 |     }
   29 | }